# starfield

./: .gitmodules  CMakeLists.txt  build.sh
glad/src/: glad.c
include/: arena.h  boids.h  camera.h  collision.h  common.h  cubes.h  math3d.h  particles.h  physics.h  shader.h  starfield.h  stars.h  voxels.h
include/glad/: glad.h
lib/: cimgui.dylib
scripts/: build_libs.sh
shaders/: basic.fs  basic.vs  debug.fs  debug.vs  particles.fs  particles.vs  tiles.fs  tiles.vs  voxel.fs  voxels.fs  voxels.vs
src/: arena.c  boids.c  camera.c  collision.c  common.c  cubes.c  main.c  main_spritesheet.c  octree.c  octree.h  particles.c  physics.c  shader.c  starfield.c  stars.c  voxels.c
